--- a/2016-05-11/source/VAN/300x600.css
+++ b/2016-05-11/source/VAN/300x600.css
@@ -504,34 +504,34 @@
 /*-- car run in animation --*/
 @-webkit-keyframes carRunAnimation {
   0%   {
-    -webkit-transform: translate(-300px,-50px);
+    -webkit-transform: translate(-300px,-50px) scale(0.5);
   }
   100% { 
-    -webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0) scale(1);
   }
 }
 @-moz-keyframes carRunAnimation {
   0%   {
-    -moz-transform: translate(-300px,-50px);
+    -moz-transform: translate(-300px,-50px) scale(0.5);
   }
   100% { 
-    -moz-transform: translate(0,0);
+    -moz-transform: translate(0,0) scale(1);
   }
 }
 @-o-keyframes carRunAnimation {
   0%   {
-    -o-transform: translate(-300px,-50px);
+    -o-transform: translate(-300px,-50px) scale(0.5);
   }
   100% { 
-    -o-transform: translate(0,0);
+    -o-transform: translate(0,0) scale(1);
   }
 }
 @keyframes carRunAnimation {
   0%   {
-    transform: translate(-300px,-50px);
+    transform: translate(-300px,-50px) scale(0.5);
   }
   100% { 
-    transform: translate(0,0);
+    transform: translate(0,0) scale(1);
   }
 }
 
@@ -618,7 +618,7 @@
   width: 300px;
   height: 162px;
   background: url('./images/300x600_background.png') no-repeat center center;
-  top: 26px;
+  top: 76px;
   left: 0px;
 }
 .car-container{
@@ -663,7 +663,7 @@
   width: 268px;
   height: 130px;
   background: url('./images/300x250_car_1.png') no-repeat center center;
-  top: 120px;
+  top: 170px;
   left: -6px;
 
   -webkit-transform: translate(-300px,-50px);
@@ -696,41 +696,41 @@
   -o-animation: fadeOut 10ms ease-in-out 4s forwards;
   animation: fadeOut 10ms ease-in-out 4s forwards; 
 }
-.front-wheel-container, .front-wheel-2-container, .front-wheel-3-container {
-  width: 34px;
-  height: 53px;
-  top: 50px;
+.front-wheel-container {
+  width: 29px;
+  height: 49px;
+  top: 53px;
   left: 114px;
 
-  -webkit-transform: scaleX(0.6415);
-  -moz-transform: scaleX(0.6415);
-  -ms-transform: scaleX(0.6415);
-  transform: scaleX(0.6415);
+  -webkit-transform: scaleX(0.592);
+  -moz-transform: scaleX(0.592);
+  -ms-transform: scaleX(0.592);
+  transform: scaleX(0.592);
 }
-.front-wheel, .front-wheel-2, .front-wheel-3 {
-  width: 53px;
-  height: 53px;
-  background: url('./images/300x250_wheel_front.png') no-repeat center center;
-  background-size: 53px 53px;
+.front-wheel {
+  width: 49px;
+  height: 49px;
+  background: url('./images/300x250_car_1_wheel_front.png') no-repeat center center;
+  background-size: 49px 49px;
   top: 0px;
   left: 0px;
 }
-.back-wheel-container, .back-wheel-2-container, .back-wheel-3-container {
-  width: 19px;
-  height: 40px;
-  top: 45px;
-  left: 28px;
+.back-wheel-container {
+  width: 16px;
+  height: 37px;
+  top: 48px;
+  left: 29px;
 
-  -webkit-transform: scaleX(0.475);
-  -moz-transform: scaleX(0.475);
-  -ms-transform: scaleX(0.475);
-  transform: scaleX(0.475);
+  -webkit-transform: scaleX(0.4324);
+  -moz-transform: scaleX(0.4324);
+  -ms-transform: scaleX(0.4324);
+  transform: scaleX(0.4324);
 }
-.back-wheel, .back-wheel-2, .back-wheel-3 {
-  width: 40px;
-  height: 40px;
-  background: url('./images/300x250_wheel_back.png') no-repeat center center;
-  background-size: 40px 40px;
+.back-wheel {
+  width: 37px;
+  height: 37px;
+  background: url('./images/300x250_car_1_wheel_back.png') no-repeat center center;
+  background-size: 37px 37px;
   top: 0px;
   left: 0px;
 }
@@ -777,7 +777,7 @@
   width: 253px;
   height: 122px;
   background: url('./images/300x250_car_2.png') no-repeat center center;
-  top: 115px;
+  top: 165px;
   left: 2px;
 
   -webkit-transform: translate(-300px,-50px);
@@ -800,12 +800,42 @@
   animation: fadeOut 10ms ease-in-out 8s forwards; 
 }
 .front-wheel-2-container {
-  top: 59px;
-  left: 90px;
+  width: 27px;
+  height: 52px;
+  top: 61px;
+  left: 93px;
+
+  -webkit-transform: scaleX(0.51923);
+  -moz-transform: scaleX(0.51923);
+  -ms-transform: scaleX(0.51923);
+  transform: scaleX(0.51923);
+}
+.front-wheel-2 {
+  width: 52px;
+  height: 52px;
+  background: url('./images/300x250_car_2_wheel_front.png') no-repeat center center;
+  background-size: 52px 52px;
+  top: 0px;
+  left: 0px;
 }
 .back-wheel-2-container {
-  top: 56px;
-  left: 10px;
+  width: 15px;
+  height: 39px;
+  top: 57px;
+  left: 11px;
+
+  -webkit-transform: scaleX(0.3846);
+  -moz-transform: scaleX(0.3846);
+  -ms-transform: scaleX(0.3846);
+  transform: scaleX(0.3846);
+}
+.back-wheel-2 {
+  width: 39px;
+  height: 39px;
+  background: url('./images/300x250_car_2_wheel_back.png') no-repeat center center;
+  background-size: 39px 39px;
+  top: 0px;
+  left: 0px;
 }
 .back-wheel-2, .front-wheel-2 {
   -webkit-animation: wheelRotationAnimation 1.5s ease-in-out 6.5s forwards;
@@ -834,7 +864,7 @@
   width: 256px;
   height: 109px;
   background: url('./images/300x250_car_3.png') no-repeat center center;
-  top: 124px;
+  top: 174px;
   left: 4px;
 
   -webkit-transform: translate(-300px,-50px);
@@ -857,12 +887,42 @@
   animation: fadeOut 10ms ease-in-out 12s forwards;
 }
 .front-wheel-3-container {
-  top: 46px;
-  left: 90px;
+  width: 26px;
+  height: 51px;
+  top: 49px;
+  left: 94px;
+
+  -webkit-transform: scaleX(0.51);
+  -moz-transform: scaleX(0.51);
+  -ms-transform: scaleX(0.51);
+  transform: scaleX(0.51);
+}
+.front-wheel-3 {
+  width: 51px;
+  height: 51px;
+  background: url('./images/300x250_car_3_wheel_front.png') no-repeat center center;
+  background-size: 51px 51px;
+  top: 0px;
+  left: 0px;
 }
 .back-wheel-3-container {
+  width: 14px;
+  height: 38px;
   top: 43px;
-  left: 9px;
+  left: 12px;
+
+  -webkit-transform: scaleX(0.3684);
+  -moz-transform: scaleX(0.3684);
+  -ms-transform: scaleX(0.3684);
+  transform: scaleX(0.3684);
+}
+.back-wheel-3 {
+  width: 38px;
+  height: 38px;
+  background: url('./images/300x250_car_3_wheel_back.png') no-repeat center center;
+  background-size: 38px 38px;
+  top: 0px;
+  left: 0px;
 }
 .back-wheel-3, .front-wheel-3 {
   -webkit-animation: wheelRotationAnimation 1.5s ease-in-out 10.5s forwards;
@@ -890,7 +950,7 @@
   width: 261px;
   height: 12px;
   background: url('./images/300x250_text.png') no-repeat center center;
-  top: 284px;
+  top: 334px;
   left: 20px;
 
   -webkit-transform: translate(-300px,0);
@@ -922,7 +982,7 @@
   width: 156px;
   height: 19px;
   background: url('./images/300x250_logo.png') no-repeat center center;
-  top: 346px;
+  top: 396px;
   right: 17px;
 
   -webkit-transform: translate(-300px,0);
