--- a/2016-05-27/source/CT/300x50.css
+++ b/2016-05-27/source/CT/300x50.css
@@ -319,7 +319,7 @@
 /*-- slide up animation--*/
 @-webkit-keyframes slideUp {
   0%   {
-    -webkit-transform: translate(0,250px);
+    -webkit-transform: translate(0,50px);
     opacity: 0;
   }
   100% { 
@@ -329,7 +329,7 @@
 }
 @-moz-keyframes slideUp {
   0%   {
-    -moz-transform: translate(0,250px);
+    -moz-transform: translate(0,50px);
     opacity: 0;
   }
   100% { 
@@ -339,7 +339,7 @@
 }
 @-o-keyframes slideUp {
   0%   {
-    -o-transform: translate(0,250px);
+    -o-transform: translate(0,50px);
     opacity: 0;
   }
   100% { 
@@ -349,7 +349,7 @@
 }
 @keyframes slideUp {
   0%   {
-    transform: translate(0,250px);
+    transform: translate(0,50px);
     opacity: 0;
   }
   100% { 
@@ -361,7 +361,7 @@
 /*-- slide down animation--*/
 @-webkit-keyframes slideDown {
   0%   {
-    -webkit-transform: translate(0,-250px);
+    -webkit-transform: translate(0,-50px);
     opacity: 0;
   }
   100% { 
@@ -371,7 +371,7 @@
 }
 @-moz-keyframes slideDown {
   0%   {
-    -moz-transform: translate(0,-250px);
+    -moz-transform: translate(0,-50px);
     opacity: 0;
   }
   100% { 
@@ -381,7 +381,7 @@
 }
 @-o-keyframes slideDown {
   0%   {
-    -o-transform: translate(0,-250px);
+    -o-transform: translate(0,-50px);
     opacity: 0;
   }
   100% { 
@@ -391,7 +391,7 @@
 }
 @keyframes slideDown {
   0%   {
-    transform: translate(0,-250px);
+    transform: translate(0,-50px);
     opacity: 0;
   }
   100% { 
@@ -406,7 +406,7 @@
     -webkit-transform: translate(0,0);
   }
   100% { 
-    -webkit-transform: translate(0,250px);
+    -webkit-transform: translate(0,50px);
   }
 }
 @-moz-keyframes slideDownFromZero {
@@ -414,7 +414,7 @@
     -moz-transform: translate(0,0);
   }
   100% { 
-    -moz-transform: translate(0,250px);
+    -moz-transform: translate(0,50px);
   }
 }
 @-o-keyframes slideDownFromZero {
@@ -422,7 +422,7 @@
     -o-transform: translate(0,0);
   }
   100% { 
-    -o-transform: translate(0,250px);
+    -o-transform: translate(0,50px);
   }
 }
 @keyframes slideDownFromZero {
@@ -430,7 +430,7 @@
     transform: translate(0,0);
   }
   100% { 
-    transform: translate(0,250px);
+    transform: translate(0,50px);
   }
 }
 /*-- roll back animation--*/
@@ -510,12 +510,12 @@
   top: 0px;
   left: 0px;
   width: 300px;
-  height: 250px;
+  height: 50px;
   display: block;
 }
 
 .banner-container{
-  background-color: #fff;
+  background-color: #000;
   overflow: hidden;
 }
 
@@ -547,7 +547,8 @@
 }
 
 .background {
-  background: url('./images/300x250_car.jpg') no-repeat center center;
+  background: url('./images/300x50_bg.jpg') no-repeat center center;
+  background-size: 100% auto;
 }
 .header-container {
   -webkit-transform: translate(300px,0);
@@ -563,11 +564,12 @@
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
 .header {
-  width: 173px;
-  height: 21px;
-  background: url('./images/300x250_header.png') no-repeat center center;
-  top: 17px;
-  left: 63px;
+  width: 70px;
+  height: 13px;
+  background: url('./images/300x50_header.png') no-repeat center center;
+  background-size: 100% auto;
+  top: 5px;
+  left: 220px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -581,7 +583,7 @@
   -o-animation: fadeIn 1s ease-in-out 2s forwards;
   animation: fadeIn 1s ease-in-out 2s forwards;
 }
-.text-container {
+.headline-container {
   -webkit-transform: translate(300px,0);
   -moz-transform: translate(300px,0);
   -ms-transform: translate(300px,0);
@@ -594,12 +596,13 @@
   -o-animation: rollBack 10ms ease-in-out 0s forwards;
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
-.text {
-  width: 250px;
-  height: 35px;
-  background: url('./images/300x250_text.png') no-repeat center center;
-  top: 45px;
-  left: 27px;
+.headline {
+  width: 104px;
+  height: 36px;
+  background: url('./images/300x50_headline.png') no-repeat center center;
+  background-size: 100% auto;
+  top: 7px;
+  left: 103px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -607,11 +610,11 @@
   -o-transform: translate(-300px,0);
   transform: translate(-300px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 3s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 3s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 3s forwards;
-  -o-animation: fadeIn 1s ease-in-out 3s forwards;
-  animation: fadeIn 1s ease-in-out 3s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 3.5s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 3.5s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 3.5s forwards;
+  -o-animation: fadeIn 1s ease-in-out 3.5s forwards;
+  animation: fadeIn 1s ease-in-out 3.5s forwards;
 }
 .cta-container {
   -webkit-transform: translate(300px,0);
@@ -627,11 +630,12 @@
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
 .cta {
-  width: 92px;
-  height: 29px;
-  background: url('./images/300x250_cta.png') no-repeat center center;
-  bottom: 26px;
-  left: 102px;
+  width: 83px;
+  height: 19px;
+  background: url('./images/300x50_cta.png') no-repeat center center;
+  background-size: 100% auto;
+  bottom: 10px;
+  right: 3px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -639,21 +643,42 @@
   -o-transform: translate(-300px,0);
   transform: translate(-300px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 4s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 4s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 4s forwards;
-  -o-animation: fadeIn 1s ease-in-out 4s forwards;
-  animation: fadeIn 1s ease-in-out 4s forwards;
+  -webkit-animation: slideRight 0.5s ease-in-out 5s forwards;
+  -moz-animation: slideRight 0.5s ease-in-out 5s forwards;
+  -ms-animation: slideRight 0.5s ease-in-out 5s forwards;
+  -o-animation: slideRight 0.5s ease-in-out 5s forwards;
+  animation: slideRight 0.5s ease-in-out 5s forwards;
 }
-.logo-container {}
-.logo {
-  width: 61px;
-  height: 35px;
-  background: url('./images/300x250_logo.png') no-repeat center center;
-  right: 10px;
-  bottom: 11px;
+.option-container {
+  -webkit-transform: translate(300px,0);
+  -moz-transform: translate(300px,0);
+  -ms-transform: translate(300px,0);
+  -o-transform: translate(300px,0);
+  transform: translate(300px,0);
+
+  -webkit-animation: rollBack 10ms ease-in-out 0s forwards;
+  -moz-animation: rollBack 10ms ease-in-out 0s forwards;
+  -ms-animation: rollBack 10ms ease-in-out 0s forwards;
+  -o-animation: rollBack 10ms ease-in-out 0s forwards;
+  animation: rollBack 10ms ease-in-out 0s forwards;
 }
-.border {
-  background: url('./images/300x250_border.png') no-repeat center center;
-  z-index: 100;
+.option {
+  width: 35px;
+  height: 6px;
+  background: url('./images/300x50_option_text.png') no-repeat center center;
+  background-size: 100% auto;
+  bottom: 2px;
+  right: 4px;
+
+  -webkit-transform: translate(-300px,0);
+  -moz-transform: translate(-300px,0);
+  -ms-transform: translate(-300px,0);
+  -o-transform: translate(-300px,0);
+  transform: translate(-300px,0);
+
+  -webkit-animation: fadeIn 1s ease-in-out 6s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 6s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 6s forwards;
+  -o-animation: fadeIn 1s ease-in-out 6s forwards;
+  animation: fadeIn 1s ease-in-out 6s forwards;
 }
